--- a/demo0-basics/demo003/package.json
+++ b/demo0-basics/demo003/package.json
@@ -1,18 +1,23 @@
 {
-  "name": "demo003",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "react-redux": "^5.0.7",
-    "redux": "^3.7.2"
-  },
+  "name": "counter",
+  "version": "0.0.1",
+  "private": true,
   "devDependencies": {
-    "redux-devtools": "^3.4.1"
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "react-scripts": "^1.1.4"
+  },
+  "dependencies": {
+    "prop-types": "^15.6.1",
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1",
+    "react-redux": "^5.0.7",
+    "redux": "^3.5.2"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "eject": "react-scripts eject",
+    "test": "react-scripts test"
   }
 }
