--- a/demo0-basics/demo004-todos/package.json
+++ b/demo0-basics/demo004-todos/package.json
@@ -1,11 +1,9 @@
 {
-  "name": "counter",
+  "name": "todos",
   "version": "0.0.1",
   "private": true,
   "devDependencies": {
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "react-scripts": "^1.1.0"
+    "react-scripts": "^1.1.4"
   },
   "dependencies": {
     "prop-types": "^15.6.1",
